deploy: 3419f8d74b898642c60bf10cab714c85f13aa3c3

--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
 <meta name=description content="Me in 10 seconds I now do mostly analytics engineering at Sundial.so.
 I&rsquo;ve worked in Machine Learning for almost ~5 years, and have written a book on Natural Language Processing. Dr. Andrew Ng recommends my work to his CS230 students at Stanford. My blogs have been appreciated by Noble Laureate Dr. Paul Romer.
 I live in Bengaluru, but grew up in Surat, Gujarat.
-Book: NLP in Python: Quickstart Guide Meant primarily for programmers to add NLP sugar to their skillset.">
+NLP in Python: Quickstart Guide Github
+This is a book for programmers to add NLP to their skillset.">
 <meta name=generator content="Hugo 0.89.4">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=./ananke/css/main.min.css>
@@ -15,21 +16,24 @@ Book: NLP in Python: Quickstart Guide Meant primarily for programmers to add NLP
 <meta property="og:description" content="Me in 10 seconds I now do mostly analytics engineering at Sundial.so.
 I&rsquo;ve worked in Machine Learning for almost ~5 years, and have written a book on Natural Language Processing. Dr. Andrew Ng recommends my work to his CS230 students at Stanford. My blogs have been appreciated by Noble Laureate Dr. Paul Romer.
 I live in Bengaluru, but grew up in Surat, Gujarat.
-Book: NLP in Python: Quickstart Guide Meant primarily for programmers to add NLP sugar to their skillset.">
+NLP in Python: Quickstart Guide Github
+This is a book for programmers to add NLP to their skillset.">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://nirantk.com/about.html"><meta property="article:section" content>
 <meta itemprop=name content>
 <meta itemprop=description content="Me in 10 seconds I now do mostly analytics engineering at Sundial.so.
 I&rsquo;ve worked in Machine Learning for almost ~5 years, and have written a book on Natural Language Processing. Dr. Andrew Ng recommends my work to his CS230 students at Stanford. My blogs have been appreciated by Noble Laureate Dr. Paul Romer.
 I live in Bengaluru, but grew up in Surat, Gujarat.
-Book: NLP in Python: Quickstart Guide Meant primarily for programmers to add NLP sugar to their skillset.">
-<meta itemprop=wordCount content="479">
+NLP in Python: Quickstart Guide Github
+This is a book for programmers to add NLP to their skillset.">
+<meta itemprop=wordCount content="511">
 <meta itemprop=keywords content="personal,"><meta name=twitter:card content="summary">
 <meta name=twitter:title content>
 <meta name=twitter:description content="Me in 10 seconds I now do mostly analytics engineering at Sundial.so.
 I&rsquo;ve worked in Machine Learning for almost ~5 years, and have written a book on Natural Language Processing. Dr. Andrew Ng recommends my work to his CS230 students at Stanford. My blogs have been appreciated by Noble Laureate Dr. Paul Romer.
 I live in Bengaluru, but grew up in Surat, Gujarat.
-Book: NLP in Python: Quickstart Guide Meant primarily for programmers to add NLP sugar to their skillset.">
+NLP in Python: Quickstart Guide Github
+This is a book for programmers to add NLP to their skillset.">
 </head>
 <body class="ma0 avenir bg-near-white">
 <header>
@@ -95,36 +99,39 @@ writing
 <p>I now do mostly <a href=https://www.getdbt.com/what-is-analytics-engineering/>analytics engineering</a> at Sundial.so.</p>
 <p>I&rsquo;ve worked in Machine Learning for almost ~5 years, and have written a <a href=#book>book</a> on Natural Language Processing. Dr. Andrew Ng recommends my work to his CS230 students at Stanford. My blogs have been appreciated by Noble Laureate Dr. Paul Romer.</p>
 <p>I live in Bengaluru, but grew up in Surat, Gujarat.</p>
-<h2 id=book-nlp-in-python-quickstart-guidehttpsreadamazoninkpembedasinb07l3plqs1previewnewtablinkcodekperef_cm_sw_r_kb_dp_mrbprc9zwrc8b4skt74x>Book: <a href="https://read.amazon.in/kp/embed?asin=B07L3PLQS1&preview=newtab&linkCode=kpe&ref_=cm_sw_r_kb_dp_MRBPRC9ZWRC8B4SKT74X">NLP in Python: Quickstart Guide</a></h2>
-<p>Meant primarily for programmers to add NLP sugar to their skillset. Written with code examples and programmer-first mindset. Available on Amazon and other select book stores.</p>
-<p>Code is also on <a href=https://github.com/NirantK/nlp-python-deep-learning>Github</a></p>
+<h2 id=nlp-in-python-quickstart-guidehttpsreadamazoninkpembedasinb07l3plqs1previewnewtablinkcodekperef_cm_sw_r_kb_dp_mrbprc9zwrc8b4skt74x><a href="https://read.amazon.in/kp/embed?asin=B07L3PLQS1&preview=newtab&linkCode=kpe&ref_=cm_sw_r_kb_dp_MRBPRC9ZWRC8B4SKT74X">NLP in Python: Quickstart Guide</a></h2>
+<p><a href=https://github.com/NirantK/nlp-python-deep-learning>Github</a></p>
+<p>This is a book for programmers to add NLP to their skillset. Written with code examples and programmer-first mindset. It has sold 1k+ copies mostly in US and UK.</p>
 <img src=https://images-eu.ssl-images-amazon.com/images/I/41uaueSqtUL._SX260_.jpg alt=bookcover style=width:261px>
-<h2 id=talks>Talks</h2>
-<ol>
-<li>Fifth Elephant MLOps Conf: <a href=https://bit.ly/startupmlops2021>Slides</a></li>
-<li>PyCon India 2019: <a href=http://bit.ly/pycon2019talk>Slides</a> and <a href=https://youtu.be/UM56FDjSx9g>Youtube</a></li>
-<li>inMobi Tech Talks: A Nightmare on the LM Street; <a href=http://bit.ly/nirant-talk-inmobi>Slides</a></li>
-<li>Wingify DevFest: NLP for Indian Languages; <a href=http://bit.ly/nirant-talk-1>Slides</a>, <a href="https://www.youtube.com/watch?v=WiqV2W7tNc8">Youtube</a></li>
-<li>PyData Bengaluru Inaugral Talk: Quiz Generation with spaCy; <a href="https://www.youtube.com/watch?v=lsIXsnmICOM">Youtube</a></li>
-</ol>
-<h2 id=open-source-contributions>Open Source Contributions</h2>
+<h2 id=papers-and-open-source-contributions>Papers and Open Source Contributions</h2>
 <ol>
 <li>
-<p>Hinglish <a href=https://github.com/NirantK/Hinglish>code</a>, <a href=https://aclanthology.org/2020.semeval-1.119/>paper</a> focussed on code-mixed languages was published in ACL 2019.</p>
+<p>Hinglish: <a href=https://github.com/NirantK/Hinglish>github</a>, <a href=https://aclanthology.org/2020.semeval-1.119/>paper</a> focussed on code-mixed languages was published in ACL 2019.</p>
 </li>
 <li>
 <p><a href=https://github.com/NirantK/awesome-project-ideas>Awesome Project Ideas</a> <img src="https://img.shields.io/github/stars/NirantK/awesome-project-ideas?style=social" style=width:20%;display:inline-block> - Curated list of machine learning (mostly deep learning) project ideas with datasets. These ideas range from Vision, Text, Forecasting to Recommender Systems</p>
 </li>
 <li>
-<p><a href=https://github.com/keon/awesome-nlp>Awesome NLP</a><img src="https://img.shields.io/github/stars/keon/awesome-nlp?style=social" style=width:20%;display:inline-block> Curated list of Natural Language Processing Resources.</p>
+<p><a href=https://github.com/keon/awesome-nlp>Awesome NLP</a><img src="https://img.shields.io/github/stars/keon/awesome-nlp?style=social" style=width:20%;display:inline-block> Curated list of Natural Language Processing Resources. I&rsquo;ve been the Primary Maintainer for <a href=https://github.com/keon/awesome-nlp>Awesome-NLP</a></p>
+<ul>
+<li>Recommended by Dr. Andrew Ng&rsquo;s (Stanford) CS 230</li>
+<li>Featured in Github&rsquo;s Official Machine Learning <a href=https://github.com/collections/machine-learning>Collection</a> since 2016 and</li>
+</ul>
+</li>
+<li>
+<p>State of the Art Language Modeling in Hindi + new datasets, check the code here at <a href=https://github.com/NirantK/hindi2vec>hindi2vec</a> <img src="https://img.shields.io/github/stars/NirantK/hindi2vec?style=social" style=width:20%;display:inline-block></p>
+</li>
+<li>
+<p>Comparative Study of Preprocessing and Classification Methods in Character Recognition of Natural Scene Images. In: Machine Intelligence and Signal Processing. Advances in Intelligent Systems and Computing, vol 390. Springer, New Delhi (2015). <a href=https://doi.org/10.1007/978-81-322-2625-3_11>https://doi.org/10.1007/978-81-322-2625-3_11</a></p>
 </li>
 </ol>
-<p>I&rsquo;ve been the Primary Maintainer for <a href=https://github.com/keon/awesome-nlp>Awesome-NLP</a></p>
-<pre><code>* Recommended by Dr. Andrew Ng's (Stanford) CS 230
-* Featured in Github's Official Machine Learning [Collection](https://github.com/collections/machine-learning) since 2016 and 
-</code></pre>
+<h2 id=talks>Talks</h2>
 <ol>
-<li>State of the Art Language Modeling in Hindi + new datasets, check the code here at <a href=https://github.com/NirantK/hindi2vec>hindi2vec</a> <img src="https://img.shields.io/github/stars/NirantK/hindi2vec?style=social" style=width:20%;display:inline-block></li>
+<li>Fifth Elephant MLOps Conf 2021: <a href=https://bit.ly/startupmlops2021>Slides</a></li>
+<li>PyCon India 2019: <a href=http://bit.ly/pycon2019talk>Slides</a> and <a href=https://youtu.be/UM56FDjSx9g>Youtube</a></li>
+<li>inMobi Tech Talks: A Nightmare on the LM Street; <a href=http://bit.ly/nirant-talk-inmobi>Slides</a></li>
+<li>Wingify DevFest: NLP for Indian Languages; <a href=http://bit.ly/nirant-talk-1>Slides</a>, <a href="https://www.youtube.com/watch?v=WiqV2W7tNc8">Youtube</a></li>
+<li>PyData Bengaluru Inaugral Talk: Quiz Generation with spaCy; <a href="https://www.youtube.com/watch?v=lsIXsnmICOM">Youtube</a></li>
 </ol>
 <h2 id=web-mentions---my-5-minutes-of-internet-fame>Web Mentions - My 5 minutes of Internet fame</h2>
 <h3 id=top-1-podium-finish-at-microsoft-ai-challenge-2018>Top 1% Podium finish at Microsoft AI Challenge 2018</h3>
