--- a/consulting.html
+++ b/consulting.html
@@ -4,40 +4,28 @@
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
 <title>Nirant Kasliwal</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="How can Nirant help you? Things to know I&rsquo;m Nirant.
-I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India.
-I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well.
-I&rsquo;m a hands on engineer and actively give back.
-What I can do for you I can-
- Discuss anything about data or Machine Learning which you need help with Build NLP datasets and models for you Can advice you in some technology decisions.">
+<meta name=description content="How can Nirant help you? Things to know I&rsquo;m Nirant. I&rsquo;m a software engineer, and I&rsquo;m here to help you.
+I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India. Here is a little bit more about me.
+I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well. I only take a maximum of 2 projects at a time.">
 <meta name=generator content="Hugo 0.89.4">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=./ananke/css/main.min.css>
 <meta property="og:title" content>
-<meta property="og:description" content="How can Nirant help you? Things to know I&rsquo;m Nirant.
-I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India.
-I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well.
-I&rsquo;m a hands on engineer and actively give back.
-What I can do for you I can-
- Discuss anything about data or Machine Learning which you need help with Build NLP datasets and models for you Can advice you in some technology decisions.">
+<meta property="og:description" content="How can Nirant help you? Things to know I&rsquo;m Nirant. I&rsquo;m a software engineer, and I&rsquo;m here to help you.
+I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India. Here is a little bit more about me.
+I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well. I only take a maximum of 2 projects at a time.">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://nirantk.com/consulting.html"><meta property="article:section" content>
 <meta itemprop=name content>
-<meta itemprop=description content="How can Nirant help you? Things to know I&rsquo;m Nirant.
-I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India.
-I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well.
-I&rsquo;m a hands on engineer and actively give back.
-What I can do for you I can-
- Discuss anything about data or Machine Learning which you need help with Build NLP datasets and models for you Can advice you in some technology decisions.">
-<meta itemprop=wordCount content="228">
+<meta itemprop=description content="How can Nirant help you? Things to know I&rsquo;m Nirant. I&rsquo;m a software engineer, and I&rsquo;m here to help you.
+I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India. Here is a little bit more about me.
+I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well. I only take a maximum of 2 projects at a time.">
+<meta itemprop=wordCount content="248">
 <meta itemprop=keywords content><meta name=twitter:card content="summary">
 <meta name=twitter:title content>
-<meta name=twitter:description content="How can Nirant help you? Things to know I&rsquo;m Nirant.
-I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India.
-I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well.
-I&rsquo;m a hands on engineer and actively give back.
-What I can do for you I can-
- Discuss anything about data or Machine Learning which you need help with Build NLP datasets and models for you Can advice you in some technology decisions.">
+<meta name=twitter:description content="How can Nirant help you? Things to know I&rsquo;m Nirant. I&rsquo;m a software engineer, and I&rsquo;m here to help you.
+I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India. Here is a little bit more about me.
+I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well. I only take a maximum of 2 projects at a time.">
 </head>
 <body class="ma0 avenir bg-near-white">
 <header>
@@ -101,10 +89,9 @@ writing
 <div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
 <h1 id=how-can-nirant-help-you>How can Nirant help you?</h1>
 <h2 id=things-to-know>Things to know</h2>
-<p>I&rsquo;m Nirant.</p>
-<p>I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India.</p>
-<p>I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well.</p>
-<p>I&rsquo;m a hands on engineer and actively give back.</p>
+<p>I&rsquo;m Nirant. I&rsquo;m a software engineer, and I&rsquo;m here to help you.</p>
+<p>I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India. Here is a little bit more <a href=./about>about me</a>.</p>
+<p>I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well. I only take a maximum of 2 projects at a time.</p>
 <h3 id=what-i-can-do-for-you>What I can do for you</h3>
 <p>I can-</p>
 <ul>
