deploy: 75d5f0c190a1157354ccbb8aca1223380ec3f22a

--- a/drafts/salary_opium.html
+++ b/drafts/salary_opium.html
@@ -8,8 +8,8 @@
 If this does not apply to you, don&rsquo;t bother reading on. Your time is valuable.
 Long time ago, the Chinese people were formidable one. The British tried to conquer them, but they were too strong.">
 <meta name=generator content="Hugo 0.90.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=../ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=../ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content>
 <meta property="og:description" content="This one is for those who seek variety, ambition and thrill and are okay with paying the price for the same in status, wealth, and health.
 If this does not apply to you, don&rsquo;t bother reading on. Your time is valuable.
@@ -27,7 +27,7 @@ Long time ago, the Chinese people were formidable one. The British tried to conq
 If this does not apply to you, don&rsquo;t bother reading on. Your time is valuable.
 Long time ago, the Chinese people were formidable one. The British tried to conquer them, but they were too strong.">
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header>
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
