--- a/now.html
+++ b/now.html
@@ -9,8 +9,8 @@ After almost 6 months of full time Machine Learning consulting/career break, I&r
  Last Updated in December 2021 from Bengaluru, India
 The concept of now page is from Derek Sivers">
 <meta name=generator content="Hugo 0.90.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=./ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=./ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content="Now">
 <meta property="og:description" content="What I’m doing now Work:
 After almost 6 months of full time Machine Learning consulting/career break, I&rsquo;ve moved to a role away from the data science field. I’m now working as a Software Engineer at Sundial.so.
@@ -34,7 +34,7 @@ After almost 6 months of full time Machine Learning consulting/career break, I&r
  Last Updated in December 2021 from Bengaluru, India
 The concept of now page is from Derek Sivers">
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header>
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
