--- a/writing/techtalktips.html
+++ b/writing/techtalktips.html
@@ -10,8 +10,8 @@
   Me: Please tell me about it! Raise a PR. Or reply to the tweet above!
  The Mindset  Presentations Skills Considered Harmful tl;dr: Do not block the message with your actions.">
 <meta name=generator content="Hugo 0.90.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=../ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=../ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content="Tech Talk Tips">
 <meta property="og:description" content="Collection of the Best Advice on Internet that I know about on giving a tech talk. Based on responses from my question on Twitter.
  Meghana gave a talk based on these tips at PyData Bengaluru
@@ -38,7 +38,7 @@
   Me: Please tell me about it! Raise a PR. Or reply to the tweet above!
  The Mindset  Presentations Skills Considered Harmful tl;dr: Do not block the message with your actions.">
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header class="cover bg-top" style=background-image:url(https://nirantk.com/images/talk.jpg)>
 <div class="pb3-m pb6-l bg-black-60">
 <nav class="pv3 ph3 ph4-ns" role=navigation>
