--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content>
 <meta name=generator content="Hugo 0.90.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=./ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=./ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
@@ -17,7 +17,7 @@
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content>
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header>
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
