--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@ I live in Bengaluru, but grew up in Surat, Gujarat.
 NLP in Python: Quickstart Guide Github
 This is a book for programmers to add NLP to their skillset.">
 <meta name=generator content="Hugo 0.90.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=./ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=./ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content>
 <meta property="og:description" content="Me in 10 seconds I now do mostly analytics engineering at Sundial.so.
 I&rsquo;ve worked in Machine Learning for almost ~5 years, and have written a book on Natural Language Processing. Dr. Andrew Ng recommends my work to his CS230 students at Stanford. My blogs have been appreciated by Noble Laureate Dr. Paul Romer.
@@ -35,7 +35,7 @@ I live in Bengaluru, but grew up in Surat, Gujarat.
 NLP in Python: Quickstart Guide Github
 This is a book for programmers to add NLP to their skillset.">
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header>
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
