--- a/consulting.html
+++ b/consulting.html
@@ -8,8 +8,8 @@
 I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India. Here is a little bit more about me.
 I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well. I only take a maximum of 2 projects at a time.">
 <meta name=generator content="Hugo 0.90.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=./ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=./ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content>
 <meta property="og:description" content="How can Nirant help you? Things to know I&rsquo;m Nirant. I&rsquo;m a software engineer, and I&rsquo;m here to help you.
 I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India. Here is a little bit more about me.
@@ -27,7 +27,7 @@ I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as we
 I&rsquo;ve about 5 years of experience doing Machine Learning across Big Corps like Samsung Research and Startups in India. Here is a little bit more about me.
 I&rsquo;m based out of India, but happy to take calls from PT/ET timezones as well. I only take a maximum of 2 projects at a time.">
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header>
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
