--- a/writing/data-science-org-design.html
+++ b/writing/data-science-org-design.html
@@ -8,8 +8,8 @@
 This blog will hopefully help folks not just build their team, but also understand the ecosystem from which they are hiring.
 Organization Design is determined by these 3 broad categories:">
 <meta name=generator content="Hugo 0.90.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=../ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=../ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content="Data Science Org Design for Startups">
 <meta property="og:description" content="Data Science Org Design for Startups While there is plenty of good advice on making ML work and making a career as a Data Scientist - I think very little discussion happens on the organization design for Data Science itself.
 This blog will hopefully help folks not just build their team, but also understand the ecosystem from which they are hiring.
@@ -30,7 +30,7 @@ Organization Design is determined by these 3 broad categories:"><meta itemprop=d
 This blog will hopefully help folks not just build their team, but also understand the ecosystem from which they are hiring.
 Organization Design is determined by these 3 broad categories:">
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header class="cover bg-top" style=background-image:url(https://nirantk.com/images/data-science-org-design.jpeg)>
 <div class="pb3-m pb6-l bg-black-60">
 <nav class="pv3 ph3 ph4-ns" role=navigation>
