--- a/writing/diwali_2019.html
+++ b/writing/diwali_2019.html
@@ -6,8 +6,8 @@
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content="And Annual Updates">
 <meta name=generator content="Hugo 0.90.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=../ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=../ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content="Happy Diwali 2019">
 <meta property="og:description" content="And Annual Updates">
 <meta property="og:type" content="article">
@@ -22,7 +22,7 @@
 <meta name=twitter:title content="Happy Diwali 2019">
 <meta name=twitter:description content="And Annual Updates">
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header class="cover bg-top" style=background-image:url(https://nirantk.com/images/Diwali2019.jpg)>
 <div class="pb3-m pb6-l bg-black-60">
 <nav class="pv3 ph3 ph4-ns" role=navigation>
