--- a/writing/failresume.html
+++ b/writing/failresume.html
@@ -8,8 +8,8 @@
 This concept originated in academia, but can be applied to improve one’s career, resilience, and approach to challenges in any walk of life.
 I’ve organized my setbacks by year (starting with 2016), and what constitutes a “failure” (or fail) here is based solely on my own judgement. It’s important to not only list the failures, but also learn from them, so I will add reflections to some of them (in progress).">
 <meta name=generator content="Hugo 0.90.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=../ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=../ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content="Fail Resume">
 <meta property="og:description" content="A fail resume is, as its name suggests, a list of rejections and setbacks.
 This concept originated in academia, but can be applied to improve one’s career, resilience, and approach to challenges in any walk of life.
@@ -30,7 +30,7 @@ I’ve organized my setbacks by year (starting with 2016), and what constitutes 
 This concept originated in academia, but can be applied to improve one’s career, resilience, and approach to challenges in any walk of life.
 I’ve organized my setbacks by year (starting with 2016), and what constitutes a “failure” (or fail) here is based solely on my own judgement. It’s important to not only list the failures, but also learn from them, so I will add reflections to some of them (in progress).">
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header>
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
