--- a/writing/manifesto.html
+++ b/writing/manifesto.html
@@ -7,8 +7,8 @@
 <meta name=description content="On Death   Is usually better the sooner it happens. Just like it’s best to retire from your cricket career at your peak for your own sake, it’s best to die when you are at your peak. You just might become Father of the Nation.
   No one wishes that they’d accomplished less on their death beds. You might hear that no one wishes that they’d worked more. That’s right too.">
 <meta name=generator content="Hugo 0.90.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=../ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=../ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content="Personal Manifesto">
 <meta property="og:description" content="On Death   Is usually better the sooner it happens. Just like it’s best to retire from your cricket career at your peak for your own sake, it’s best to die when you are at your peak. You just might become Father of the Nation.
   No one wishes that they’d accomplished less on their death beds. You might hear that no one wishes that they’d worked more. That’s right too.">
@@ -26,7 +26,7 @@
 <meta name=twitter:description content="On Death   Is usually better the sooner it happens. Just like it’s best to retire from your cricket career at your peak for your own sake, it’s best to die when you are at your peak. You just might become Father of the Nation.
   No one wishes that they’d accomplished less on their death beds. You might hear that no one wishes that they’d worked more. That’s right too.">
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header>
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
