--- a/writing/politics_at_work.html
+++ b/writing/politics_at_work.html
@@ -7,8 +7,8 @@
 <meta name=description content="This quick entry is partially inspired by a similar entry from Manas Saloi. Ofc, other folks have offered their opinions on Basecamp and earlier Coinbase.
 The woke mob is shitting on Jason and DHH, but I strongly agree with Basecamp’s new policies. IMHO a company is supposed to create an environment where people come and do their best work without having to align to one side of the political spectrum.">
 <meta name=generator content="Hugo 0.90.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=../ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=../ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content="Politics at Work">
 <meta property="og:description" content="This quick entry is partially inspired by a similar entry from Manas Saloi. Ofc, other folks have offered their opinions on Basecamp and earlier Coinbase.
 The woke mob is shitting on Jason and DHH, but I strongly agree with Basecamp’s new policies. IMHO a company is supposed to create an environment where people come and do their best work without having to align to one side of the political spectrum.">
@@ -26,7 +26,7 @@ The woke mob is shitting on Jason and DHH, but I strongly agree with Basecamp’
 <meta name=twitter:description content="This quick entry is partially inspired by a similar entry from Manas Saloi. Ofc, other folks have offered their opinions on Basecamp and earlier Coinbase.
 The woke mob is shitting on Jason and DHH, but I strongly agree with Basecamp’s new policies. IMHO a company is supposed to create an environment where people come and do their best work without having to align to one side of the political spectrum.">
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header>
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
