deploy: 558a628c9886593ca7fa8154b14f10747a3c5e63

--- a/writing/character-is-net-worth.html
+++ b/writing/character-is-net-worth.html
@@ -149,7 +149,20 @@ And 2 more metaphors
 <div class="mt6 instapaper_ignoref">
 </div>
 </div>
-<aside class="w-30-l mt6-l">
+<aside class="w-30-l mt6-l"><div class="bg-light-gray pa3 nested-list-reset nested-copy-line-height nested-links">
+<p class="f5 b mb3">What's in this writing</p>
+<nav id=TableOfContents>
+<ul>
+<li><a href=#freedom>Freedom</a></li>
+<li><a href=#sharing>Sharing</a></li>
+<li><a href=#reputation-is-insurance>Reputation is Insurance</a></li>
+<li><a href=#shared-and-specific>Shared and Specific</a></li>
+</ul>
+<ul>
+<li><a href=#three-to-take-away>Three to Take Away</a></li>
+</ul>
+</nav>
+</div>
 <div class="bg-light-gray pa3 nested-list-reset nested-copy-line-height nested-links">
 <p class="f5 b mb3">Related</p>
 <ul class="pa0 list">
