deploy: 278cd33f8049acea1b3303cbd2e4c9dbf66652d2

--- a/index.html
+++ b/index.html
@@ -91,6 +91,27 @@ Recent
 <article class="bb b--black-10">
 <div class="db pv4 ph3 ph0-l no-underline dark-gray">
 <div class="flex flex-column flex-row-ns">
+<div class="blah w-100">
+<h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=./writing/breaking-into-nlp.html class="color-inherit dim link">
+Advice for Breaking into NLP outside Academia
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+Bulk of this is borrowed from notes made my teammate and friend at Verloop.io&rsquo;s NLP/ML team of our conversations. I&rsquo;ve taken the liberty to remove our internal slang and some boring stuff.
+Q: I want to build a community around me on NLP. How can I get discovered by others?
+A: Broadly speaking, the aim in forming connections can be split into Long Term and Short term. A short term aim would be where you can receive something immediate out of the connections or a particular connection itself.
+</div>
+<a href=./writing/breaking-into-nlp.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
 <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
 <a href=./writing/data-science-org-design.html class="db grow">
 <img src=https://nirantk.com/images/data-science-org-design.jpeg class=img alt="image from Data Science Org Design for Startups">
@@ -275,35 +296,14 @@ This is the guide which I sometimes send to our candidates after they submit the
 </div>
 </article>
 </div>
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
-<a href=./writing/talentcooling.html class="db grow">
-<img src=https://nirantk.com/images/talent-cooling.jpg class=img alt="image from Talent Cooling">
-</a>
-</div>
-<div class="blah w-100 w-60-ns pl3-ns">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=./writing/talentcooling.html class="color-inherit dim link">
-Talent Cooling
-</a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Talent Cooling Kills Startup Growth Evaporative Cooling [1] occurs when the most high value contributors to a community realize that the community is no longer serving their needs any more and so therefore, leave.
-Then something remarkably interesting happens:
-When that happens, it drops the general quality of the community down such that the next most high value contributors now find the community underwhelming. Each layer of disappearances slowly reduces the average quality of the group until such a point that you reach the people who are so unskilled-and-unaware of it that they’re unable to tell that they’re part of a mediocre group.
-</div>
-<a href=./writing/talentcooling.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
 </section>
 <section class=w-100>
 <h1 class=f3>More</h1>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=./writing/talentcooling.html class="link black dim">
+Talent Cooling
+</a>
+</h2>
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=./writing/shreyas.html class="link black dim">
 Shreyas Karanth: Moving from SW Engg to Product
@@ -317,11 +317,6 @@ Standing Out at Work
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=./writing/failresume.html class="link black dim">
 Fail Resume
-</a>
-</h2>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=./writing/ankitnagori.html class="link black dim">
-Ankit Nagori, Co-Founder of Cult
 </a>
 </h2>
 <a href=./writing.html class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All </a>
