--- a/writing.html
+++ b/writing.html
@@ -92,6 +92,22 @@ Collection of my Essays and Thoughts
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Writing</span>
 <h1 class="f3 near-black">
+<a href=./writing/breaking-into-nlp.html class="link black dim">
+Advice for Breaking into NLP outside Academia
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Bulk of this is borrowed from notes made my teammate and friend at Verloop.io&rsquo;s NLP/ML team of our conversations. I&rsquo;ve taken the liberty to remove our internal slang and some boring stuff.
+Q: I want to build a community around me on NLP. How can I get discovered by others?
+A: Broadly speaking, the aim in forming connections can be split into Long Term and Short term. A short term aim would be where you can receive something immediate out of the connections or a particular connection itself.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Writing</span>
+<h1 class="f3 near-black">
 <a href=./writing/data-science-org-design.html class="link black dim">
 Data Science Org Design for Startups
 </a>
@@ -212,22 +228,6 @@ Verloop NLP Interview Prep Guide
 Update, September 2021: This guide is a little outdated, but not obsolete. I no longer work at Verloop.io.
 Preparation Guide I&rsquo;ve been an early Machine Learning Engineer at Verloop.io for almost 1.5 years, primarily working on NLP problems and now more in an Engineering Manager-ish role.
 This is the guide which I sometimes send to our candidates after they submit the Programming Challenge. If a candidate has relevant open source code sample, specially to other repositories we may choose to waive off the Programming Challenge completely.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Writing</span>
-<h1 class="f3 near-black">
-<a href=./writing/talentcooling.html class="link black dim">
-Talent Cooling
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Talent Cooling Kills Startup Growth Evaporative Cooling [1] occurs when the most high value contributors to a community realize that the community is no longer serving their needs any more and so therefore, leave.
-Then something remarkably interesting happens:
-When that happens, it drops the general quality of the community down such that the next most high value contributors now find the community underwhelming. Each layer of disappearances slowly reduces the average quality of the group until such a point that you reach the people who are so unskilled-and-unaware of it that they’re unable to tell that they’re part of a mediocre group.
 </div>
 </div>
 </div>
