deploy: 89be368c40a5eb36b9133403df653228c4bf1128

--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@ Recent
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
 <a href=./writing/breaking-into-nlp.html class="color-inherit dim link">
-Advice for Breaking into NLP outside Academia
+Breaking into NLP for outsiders
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
 Bulk of this is borrowed from notes made my teammate and friend at Verloop.io&rsquo;s NLP/ML team of our conversations. I&rsquo;ve taken the liberty to remove our internal slang and some boring stuff.
-Q: I want to build a community around me on NLP. How can I get discovered by others?
-A: Broadly speaking, the aim in forming connections can be split into Long Term and Short term. A short term aim would be where you can receive something immediate out of the connections or a particular connection itself.
+I want to build a community around me on NLP. How can I get discovered by others?
+Broadly speaking, the aim in forming connections can be split into Long Term and Short term. A short term aim would be where you can receive something immediate out of the connections or a particular connection itself.
 </div>
 <a href=./writing/breaking-into-nlp.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
