--- a/writing.html
+++ b/writing.html
@@ -93,13 +93,13 @@ Collection of my Essays and Thoughts
 <span class="f6 db">Writing</span>
 <h1 class="f3 near-black">
 <a href=./writing/breaking-into-nlp.html class="link black dim">
-Advice for Breaking into NLP outside Academia
+Breaking into NLP for outsiders
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Bulk of this is borrowed from notes made my teammate and friend at Verloop.io&rsquo;s NLP/ML team of our conversations. I&rsquo;ve taken the liberty to remove our internal slang and some boring stuff.
-Q: I want to build a community around me on NLP. How can I get discovered by others?
-A: Broadly speaking, the aim in forming connections can be split into Long Term and Short term. A short term aim would be where you can receive something immediate out of the connections or a particular connection itself.
+I want to build a community around me on NLP. How can I get discovered by others?
+Broadly speaking, the aim in forming connections can be split into Long Term and Short term. A short term aim would be where you can receive something immediate out of the connections or a particular connection itself.
 </div>
 </div>
 </div>
