deploy: 6718618c05a16375f516a31275ce496e6061cd36

--- a/tags.html
+++ b/tags.html
@@ -91,7 +91,7 @@ Tag: career
 <span class="f6 db">Writing</span>
 <h1 class="f3 near-black">
 <a href=./writing/breaking-into-nlp.html class="link black dim">
-Breaking into NLP for outsiders
+Breaking into NLP
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
@@ -420,7 +420,7 @@ Tag: niranting
 <span class="f6 db">Writing</span>
 <h1 class="f3 near-black">
 <a href=./writing/breaking-into-nlp.html class="link black dim">
-Breaking into NLP for outsiders
+Breaking into NLP
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
