--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Recent
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
 <a href=./writing/breaking-into-nlp.html class="color-inherit dim link">
-Breaking into NLP for outsiders
+Breaking into NLP
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
