deploy: 7b3aafc7c2415a4bbba2cce54b918aaa2e3a74e1

--- a/index.html
+++ b/index.html
@@ -93,6 +93,26 @@ Recent
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
+<a href=./writing/antiskill.html class="color-inherit dim link">
+Anti Skills
+</a>
+</h1>
+<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+Consider this hypothetical: If you&rsquo;re a software engineer who is known to be good at iOS development, you&rsquo;ll find it hard to get job offers outside of iOS development[1]
+The amount paid to you for this will keep improving as you keep getting better at it. Note that this increased pay might still be less than even starting pay in some other fields, say Data Science &ndash; but you&rsquo;ve Golden Handcuffs on you now, don&rsquo;t you?
+</div>
+<a href=./writing/antiskill.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+</div>
+</div>
+</div>
+</article>
+</div>
+<div class="relative w-100 mb4">
+<article class="bb b--black-10">
+<div class="db pv4 ph3 ph0-l no-underline dark-gray">
+<div class="flex flex-column flex-row-ns">
+<div class="blah w-100">
+<h1 class="f3 fw1 athelas mt0 lh-title">
 <a href=./writing/breaking-into-nlp.html class="color-inherit dim link">
 Breaking into NLP
 </a>
@@ -275,30 +295,14 @@ We were directly responsible for most Natural Language Processing needs within t
 </div>
 </article>
 </div>
-<div class="relative w-100 mb4">
-<article class="bb b--black-10">
-<div class="db pv4 ph3 ph0-l no-underline dark-gray">
-<div class="flex flex-column flex-row-ns">
-<div class="blah w-100">
-<h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=./writing/verloop-ml-prep-guide.html class="color-inherit dim link">
-Verloop NLP Interview Prep Guide
-</a>
-</h1>
-<div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Update, September 2021: This guide is a little outdated, but not obsolete. I no longer work at Verloop.io.
-Preparation Guide I&rsquo;ve been an early Machine Learning Engineer at Verloop.io for almost 1.5 years, primarily working on NLP problems and now more in an Engineering Manager-ish role.
-This is the guide which I sometimes send to our candidates after they submit the Programming Challenge. If a candidate has relevant open source code sample, specially to other repositories we may choose to waive off the Programming Challenge completely.
-</div>
-<a href=./writing/verloop-ml-prep-guide.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
-</div>
-</div>
-</div>
-</article>
-</div>
 </section>
 <section class=w-100>
 <h1 class=f3>More</h1>
+<h2 class="f5 fw4 mb4 dib mr3">
+<a href=./writing/verloop-ml-prep-guide.html class="link black dim">
+Verloop NLP Interview Prep Guide
+</a>
+</h2>
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=./writing/talentcooling.html class="link black dim">
 Talent Cooling
@@ -312,11 +316,6 @@ Shreyas Karanth: Moving from SW Engg to Product
 <h2 class="f5 fw4 mb4 dib mr3">
 <a href=./writing/standout.html class="link black dim">
 Standing Out at Work
-</a>
-</h2>
-<h2 class="f5 fw4 mb4 dib mr3">
-<a href=./writing/failresume.html class="link black dim">
-Fail Resume
 </a>
 </h2>
 <a href=./writing.html class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All </a>
