--- a/tags.html
+++ b/tags.html
@@ -90,6 +90,20 @@ Tag: career
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Writing</span>
 <h1 class="f3 near-black">
+<a href=./writing/antiskill.html class="link black dim">
+Anti Skills
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Consider this hypothetical: If you&rsquo;re a software engineer who is known to be good at iOS development, you&rsquo;ll find it hard to get job offers outside of iOS development[1]
+The amount paid to you for this will keep improving as you keep getting better at it. Note that this increased pay might still be less than even starting pay in some other fields, say Data Science &ndash; but you&rsquo;ve Golden Handcuffs on you now, don&rsquo;t you?
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Writing</span>
+<h1 class="f3 near-black">
 <a href=./writing/breaking-into-nlp.html class="link black dim">
 Breaking into NLP
 </a>
@@ -415,6 +429,20 @@ I am now in a even more Computer Vision focused role for a small enterprise tech
 Tag: niranting
 </a>
 </h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Writing</span>
+<h1 class="f3 near-black">
+<a href=./writing/antiskill.html class="link black dim">
+Anti Skills
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Consider this hypothetical: If you&rsquo;re a software engineer who is known to be good at iOS development, you&rsquo;ll find it hard to get job offers outside of iOS development[1]
+The amount paid to you for this will keep improving as you keep getting better at it. Note that this increased pay might still be less than even starting pay in some other fields, say Data Science &ndash; but you&rsquo;ve Golden Handcuffs on you now, don&rsquo;t you?
+</div>
+</div>
+</div>
 <div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Writing</span>
