--- a/writing.html
+++ b/writing.html
@@ -92,6 +92,21 @@ Collection of my Essays and Thoughts
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Writing</span>
 <h1 class="f3 near-black">
+<a href=./writing/antiskill.html class="link black dim">
+Anti Skills
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Consider this hypothetical: If you&rsquo;re a software engineer who is known to be good at iOS development, you&rsquo;ll find it hard to get job offers outside of iOS development[1]
+The amount paid to you for this will keep improving as you keep getting better at it. Note that this increased pay might still be less than even starting pay in some other fields, say Data Science &ndash; but you&rsquo;ve Golden Handcuffs on you now, don&rsquo;t you?
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Writing</span>
+<h1 class="f3 near-black">
 <a href=./writing/breaking-into-nlp.html class="link black dim">
 Breaking into NLP
 </a>
@@ -212,22 +227,6 @@ Building a Data Science Team at a Startup
 Hello!
 If we are meeting for the first time, a short version of my story so far: After doing research engineering for almost 4 years across startups and a BigCo, I joined as an early machine learning engineer at Verloop.io - a B2B startup that makes customer support automation SaaS in 2019. I was there till April 2021.
 We were directly responsible for most Natural Language Processing needs within the business.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Writing</span>
-<h1 class="f3 near-black">
-<a href=./writing/verloop-ml-prep-guide.html class="link black dim">
-Verloop NLP Interview Prep Guide
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Update, September 2021: This guide is a little outdated, but not obsolete. I no longer work at Verloop.io.
-Preparation Guide I&rsquo;ve been an early Machine Learning Engineer at Verloop.io for almost 1.5 years, primarily working on NLP problems and now more in an Engineering Manager-ish role.
-This is the guide which I sometimes send to our candidates after they submit the Programming Challenge. If a candidate has relevant open source code sample, specially to other repositories we may choose to waive off the Programming Challenge completely.
 </div>
 </div>
 </div>
