--- a/tags.html
+++ b/tags.html
@@ -95,8 +95,9 @@ Anti Skills
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Consider this hypothetical: If you&rsquo;re a software engineer who is known to be good at iOS development, you&rsquo;ll find it hard to get job offers outside of iOS development[1]
-The amount paid to you for this will keep improving as you keep getting better at it. Note that this increased pay might still be less than even starting pay in some other fields, say Data Science &ndash; but you&rsquo;ve Golden Handcuffs on you now, don&rsquo;t you?
+You learn a well-paying skill and years later - it comes back to hurt you in unexpected ways. That&rsquo;s an Anti Skill.
+Consider this hypothetical: You start of your software engineering career and build a reputation as someone who is good at iOS development. Each year, the money you make keeps improving as you keep getting better at it.
+The downside? You&rsquo;ll find it hard to get job offers outside of iOS development [1]
 </div>
 </div>
 </div>
@@ -438,8 +439,9 @@ Anti Skills
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
-Consider this hypothetical: If you&rsquo;re a software engineer who is known to be good at iOS development, you&rsquo;ll find it hard to get job offers outside of iOS development[1]
-The amount paid to you for this will keep improving as you keep getting better at it. Note that this increased pay might still be less than even starting pay in some other fields, say Data Science &ndash; but you&rsquo;ve Golden Handcuffs on you now, don&rsquo;t you?
+You learn a well-paying skill and years later - it comes back to hurt you in unexpected ways. That&rsquo;s an Anti Skill.
+Consider this hypothetical: You start of your software engineering career and build a reputation as someone who is good at iOS development. Each year, the money you make keeps improving as you keep getting better at it.
+The downside? You&rsquo;ll find it hard to get job offers outside of iOS development [1]
 </div>
 </div>
 </div>
