--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Nirant Kasliwal | Nirant Kasliwal</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content="I dabble in Natural Language Processing">
-<meta name=generator content="Hugo 0.90.1">
+<meta name=generator content="Hugo 0.91.0">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=./ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <link href=./index.xml rel=alternate type=application/rss+xml title="Nirant Kasliwal">
@@ -99,7 +99,7 @@ Anti Skills
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
 You learn a well-paying skill and years later - it comes back to hurt you in unexpected ways. That&rsquo;s an Anti Skill.
-Consider this hypothetical: You start of your software engineering career and build a reputation as someone who is good at iOS development. Each year, the money you make keeps improving as you keep getting better at it.
+Consider this hypothetical: You start your software engineering career and build a reputation as someone who is good at iOS development. Each year, the money you make keeps improving as you keep getting better at it.
 The downside? You&rsquo;ll find it hard to get job offers outside of iOS development [1]
 </div>
 <a href=./writing/antiskill.html class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
